--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,2 +1,3 @@
-home.welcome=Welcome home Peter Parker!
-home.welcome.tag=Welcome home <b>Peter<b>.
+required.password = Password is required!
+required.passwordConfirm = Confirm password is required!
+notmatch.password = Password and Conform password is not match!
